# paper-bank

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .uvrc  CITATION.cff  CLAUDE.md  FEATURES.md  README.md  _data_config.R  _quarto-dev.yml  _quarto-publish.yml  _quarto.yml  apa.csl  cross.yaml  fetch-paperpile.sh  pyproject.toml
.serena/: project.yml
claudedocs/: democracy_harmonization_summary.md  scale_detection_logic.md
doi-check/: doi_verification_progress.json  doi_verification_report.txt  doi_verification_results.csv
notebooks/: README.md
outputs/: HARMONIZATION_RESULTS_SUMMARY.md  HARMONIZATION_RUN_SUMMARY.md  HARMONIZATION_TEST_REPORT.md  HARMONIZATION_VALIDATION_SUMMARY.md  HARMONIZED_DATA_USER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MASTER_DATASET_SUMMARY.md  abs_econdev_authpref.rds  changed_variables.md  civil_service_harmonization_code.R  data_prep_module_summary.txt  democracy_satisfaction_harmonization_summary.txt  harmonization_test_results.csv  harmonization_validation_fixlist.md  harmonization_validation_report.md  harmonization_validation_triage.csv  harmonization_validation_triage.md  institutional_trust_raw.csv  institutional_trust_yaml_summary.txt  master_long_format.rds  master_variable_metadata.csv  master_w1.rds  master_w2.rds  master_w3.rds  master_w4.rds  master_w5.rds  master_w6.rds  validated_question_inventory.csv
scripts/: build.R  build.py  build_master_complete.R  build_master_debug.R  build_master_from_specs.R  combine_harmonized_datasets.R  create_master_dataset.R  get_vdem_scores.R  (+4 more)
(+1161 files in other folders)
